--- a/app/views/photos/index.html.haml
+++ b/app/views/photos/index.html.haml
@@ -1,3 +1,9 @@
-No photos yet
+-if @photos.any?
+  -@photos.each do |photo|
+    = image_tag photo.image.url(:medium)
+    %h2= photo.name
+    = link_to photo.name, photo_path(photo)
+-else
+  %h1 No photos yet
 
-%a(href='#') Add a photo
+= link_to "Add a photo", new_photo_path
