added implementation for deleting posts

--- a/app/views/photos/index.html.haml
+++ b/app/views/photos/index.html.haml
@@ -3,6 +3,7 @@
     = image_tag photo.image.url(:medium)
     %h2= photo.name
     = link_to photo.name, photo_path(photo)
+    = link_to "Delete #{photo.name}", photo_path(photo), method: :delete
 -else
   %h1 No photos yet
 
