Can leave comments on photos

--- a/app/views/photos/index.html.haml
+++ b/app/views/photos/index.html.haml
@@ -2,8 +2,16 @@
   -@photos.each do |photo|
     = image_tag photo.image.url(:medium)
     %h2= photo.name
+    -if photo.comments.any?
+      %ul
+        - photo.comments.each do |comment|
+          %li
+            = comment.thoughts
+    - else
+      %p No comments
     = link_to photo.name, photo_path(photo)
     = link_to "Delete #{photo.name}", photo_path(photo), method: :delete
+    = link_to "Comment", new_photo_comment_path(photo)
 -else
   %h1 No photos yet
 
